--- a/src/components/EmployeeCard/style.css
+++ b/src/components/EmployeeCard/style.css
@@ -1,6 +1,6 @@
 .card {
-  background: #fff;
-  border-radius: 2px;
+  background: #e8cbc0;
+  background: linear-gradient(to right, #ffded2, #bbc6f8);
   height: 325px;
   margin: 1rem;
   position: relative;
@@ -9,17 +9,17 @@
   text-align: left;
 }
 
-.card > .img-container {
-  height: 60%;
+.card > .img-fluid {
   overflow: hidden;
   text-align: center;
-  background:#6CADDC;
-}
-.card > .img-container > img {
-  width: 60%
+  background: #90a3f6;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.card > .content {
+.card > .content,
+h1 {
   padding-left: 1rem;
   padding-right: 1rem;
   font-size: 15px;
@@ -33,15 +33,6 @@
   margin-top: 18px;
 }
 
-.card > .remove {
-  color: #ff1744;
-  font-size: 48px;
-  position: absolute;
-  top: -20px;
-  right: 5px;
-  cursor: pointer;
-}
-
-.card > .remove:hover {
-  color: #d50000;
+h1 {
+  text-align: center;
 }
