--- a/src/components/EmployeeCard/style.css
+++ b/src/components/EmployeeCard/style.css
@@ -18,11 +18,13 @@
   margin-right: auto;
 }
 
-.card > .content,
-h1 {
+.card > .content {
   padding-left: 1rem;
   padding-right: 1rem;
   font-size: 15px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card > .content > ul {
