--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -2,7 +2,11 @@ nav {
   position: fixed;
   text-align: center;
   background: linear-gradient(to right, #ffded2, #bbc6f8);
-  font-size: 3rem;
   text-decoration: none;
-  color: #2a77ae;
+}
+.btn {
+  margin: 5px;
+}
+#logo {
+  height: 50px;
 }
